// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button styled components S.Text matches snapshot default 1`] = `
<Text
  fillColor="#000000"
  style={
    Array [
      Object {
        "color": "#ffffff",
        "fontWeight": "bold",
      },
    ]
  }
/>
`;

exports[`Button styled components S.Text matches snapshot outline 1`] = `
<Text
  fillColor="#000000"
  isOutline={true}
  style={
    Array [
      Object {
        "color": "#000000",
        "fontWeight": "bold",
      },
    ]
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot border 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 2,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 0,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot default 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 0,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot filled 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 16,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot isSmallHeight 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 36,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 0,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot isSmallWidth 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 0,
      "minWidth": 72,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot margin bottom 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 16,
      "marginRight": 0,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot margin right 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 16,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;

exports[`Button styled components S.Wrap matches snapshot outline 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#000000",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "marginBottom": 0,
      "marginRight": 0,
      "minWidth": 136,
      "opacity": 1,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
/>
`;
